12/01/2024
==========
Added support for heirarchical users
Added support for static htmls 
Added support for static html that's sent if user authentication is valid
Added support for static html on a per user basis
Added support for login plugin
Added support for a simple interface for a embedded device


21/03/2021
==========
Removal of upnp and md5
Addition of rand_reentrant as a replacement of rand_r (which is not present on msys64) [copied from bsd version of source]
Updated makefiles (makefile for linux and makefile.msys64 for windows msys64 environment)
Removed mingw32 makefile
Updated session id creation using random numbers instead of MD5
Added astyle scripts to autoindent the source
Fixed indentation of the whole project
Moved upnp and md5 related source to unused.


20/03/2021
==========
Support for msys64
Removal of nspr libraries, wrappers created for functions and structures
Removal of miniupnpc libraries


29/04/2016
==========
Made changes to the way session variables are read and stored, new functions added.


16/04/2016
==========
Makefile addition for mingw32 compilation
Addition of libcopy.sh for copying libraries to a folder containing binaries
Miniupnp integration for windows. 
Sucessful windows build using mingw32 on linux fedora 22, basic functions working properly


27/March/2016
=============
Changed functions to 64Bit functions
Changed some printf to fprintf 
Added some fprintf beautification
Added postfileName for postData
Added multipart header file


26/March/2016
=============
added processContentType function to process multipart content type and retrieving boundary.


25/March/2016
=============
Changed the size of encoded url to 1024
Made modifications to query 
added getReqFileAuth 
added getReqFileType
added filetype based access control
added ip based file chooser no need for login
added signal handlers for SIGINT SIGSTOP SIGTERM 
added a function for clean of threads on abort


24/March/2016
=============