@@ -1,4 +1,4 @@
 #!/bin/bash
 
 export LD_LIBRARY_PATH=`pwd`
-./httpdsrv 15000 10
+./httpdsrv 15000 10 16000
