@@ -1,3 +1,11 @@
+13/01/2024
+==========
+Added support for removal of post temporary file, Should be removed from plugins. Multipart read has to be end-user implementation.
+Added support for large file upload through POST multipart.
+Changed all the file offset from int to size_t for 64bit support
+Code cleanup.
+
+
 12/01/2024
 ==========
 Added support for heirarchical users
